Optimize package names.